syntax = "proto3";

package auctionservice;

import "google/protobuf/timestamp.proto";

// Message Definitions

message Bid {
  int64 bid_id = 1;
  int64 user_id = 2;
  int64 catalogue_id = 3;
  int64 amount = 4;
  google.protobuf.Timestamp bid_time = 5;
}

// Place Bid Request
message PlaceBidRequest {
  int64 user_id = 1;
  string user_first_name = 2;
  string user_last_name = 3;
  int64 catalogue_id = 4;
  int64 amount = 5;
}

// Place Bid Response
message PlaceBidResponse {
  bool success = 1;
  string message = 2;
}

message GetAuctionEndRequest {
  int64 catalogue_id = 1;
}

message GetAuctionEndResponse {
  bool found = 1;
  google.protobuf.Timestamp end_time = 2;
  string message = 3;
}

message GetAuctionStatusRequest {
  int64 catalogue_id = 1;
}

message GetAuctionStatusResponse {
  bool success = 1;
  int64 highest_bidder = 2;
  int64 current_amount = 3;
  int64 remaining_time = 4;
  string message = 5;
}

message GetAuctionWinnerRequest {
  int64 catalogue_id = 1;
}

message GetAuctionWinnerResponse {
  bool found = 1;
  int64 winner_user_id = 2;
  string user_first_name = 3;
  string user_last_name = 4;
  int64 final_price = 5;
  string message = 6;
}

message GetBidHistoryRequest {
  int64 catalogue_id = 1;
}

message GetBidHistoryResponse {
  bool success = 1;
  repeated Bid bid_history = 2;
  string message = 3;
}

message StartAuctionRequest {
  int64 user_id = 1;
  int64 catalogue_id = 2;
  int64 starting_amount = 3;
  google.protobuf.Timestamp end_time = 4;
}

message StartAuctionResponse {
  bool success = 1;
  string message = 2;
}

// Auction Service Definition
service AuctionService {
  rpc PlaceBid(PlaceBidRequest) returns (PlaceBidResponse);

  rpc GetAuctionEnd(GetAuctionEndRequest) returns (GetAuctionEndResponse);

  rpc GetAuctionStatus(GetAuctionStatusRequest) returns (GetAuctionStatusResponse);

  rpc GetAuctionWinner(GetAuctionWinnerRequest) returns (GetAuctionWinnerResponse);

  rpc GetBidHistory(GetBidHistoryRequest) returns (GetBidHistoryResponse);

  rpc StartAuction(StartAuctionRequest) returns (StartAuctionResponse);
}

